# collisionwise-simulation

./: .gitignore  CMakeLists.txt  Makefile  TASKS.txt  averaging_tools.cpp  averaging_tools.h  box.h  collide_two_particles.cpp  collide_two_particles.h  default.h  eps_close.cpp  eps_close.h  hashing.cpp  hashing.h  main.cpp  main_simulation.h  main_time_interval.h  model.h  model_base.cpp  model_dump.cpp  model_parallel_collide.cpp  myrandom.cpp  myrandom.h  particle.cpp  particle.h  run.cmd  test_eigen.cpp  thread_pool.cpp  thread_pool.h  time_queue.cpp  time_queue.h
old/: box.cpp  double_eps_close.cpp  gayush.py  interaction.cpp  intersection.py  timeit.cpp
python/: animate_2d.py  read_binary.py  show.ipynb  show.py  to_video.py
python-gui/: main.py  read_binary.py  sample.bat
